# nexus

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE  Makefile  Makefile.config  README.md  build-deps.bash  build-tensorflow.bash
apps/face_rec/: Makefile
apps/face_rec/src/: face_rec.cpp
apps/obj_rec/: Makefile
apps/obj_rec/src/: obj_rec.cpp  obj_rec_app.cpp
apps/simple_app/: Makefile
apps/simple_app/src/: main.cpp
apps/traffic_app/: Makefile
apps/traffic_app/src/: main.cpp
apps/traffic_app2/src/: main.cpp
apps/traffic_app_simple/: Dockerfile  Makefile
apps/traffic_app_simple/src/: main.cpp
apps/traffic_complex/: Makefile
cmake/: FindProtobuf.cmake  FindgRPC.cmake
config/: backend_docker.yml  backend_example.yml  model_db.yml  scheduler_docker.yml  scheduler_example.yml
dockerfiles/: NexusAppLibDockerfile  NexusBackendDockerfile  NexusBaseDockerfile  NexusSchedulerDockerfile  build_docker.sh
docs/: compile.md  deploy.md  docker.md
examples/: README.md
examples/face_rec/src/: face_rec.cpp
examples/obj_rec/src/: obj_rec.cpp
examples/simple_app/src/: client.py
examples/traffic_complex/src/: traffic_complex.cpp
frameworks/: CMakeLists.txt  caffe2-patch.diff  tf_configure.bazelrc
python/: requirements.txt  setup.py
python/nexus/: __init__.py  async_client.py  client.py
src/darknet/: Makefile  darknet_server.c  darknet_server.h
src/nexus/: CMakeLists.txt
src/nexus/app/:  complex_query_app.cpp  CMakeLists.txt  app_base.cpp  app_base.h  complex_query_app.h  exec_block.h  frontend.cpp  frontend.h  model_handler.cpp  model_handler.h  query_processor.h  request_context.cpp  request_context.h  rpc_service.cpp  rpc_service.h  scheduler_client.cpp  scheduler_client.h  user_session.h  worker.cpp  worker.h
src/nexus/backend/: CMakeLists.txt  backend_main.cpp  backend_server.cpp  backend_server.h  backup_client.cpp  backup_client.h  batch.cpp  batch.h  batch_task.cpp  batch_task.h  caffe2_model.cpp  caffe2_model.h  caffe_densecap_model.cpp  caffe_densecap_model.h  caffe_model.cpp  caffe_model.h  darknet_model.cpp  darknet_model.h  gpu_executor.cpp  gpu_executor.h  model_exec.cpp  model_exec.h  model_ins.cpp  model_ins.h  postprocess.cpp  postprocess.h  prefix_model.cpp  prefix_model.h  rpc_service.cpp  rpc_service.h  scheduler_client.cpp  scheduler_client.h  share_prefix_model.cpp  share_prefix_model.h  slice.cpp  slice.h  task.cpp  task.h  tensorflow_model.cpp  tensorflow_model.h  (+6 more)
src/nexus/common/: CMakeLists.txt  backend_pool.cpp  backend_pool.h  block_queue.h  buffer.cpp  buffer.h  config.h  connection.cpp  connection.h  data_type.cpp  data_type.h  device.cpp  device.h  image.cpp  image.h  message.cpp  message.h  metric.cpp  metric.h  model_db.cpp  model_db.h  model_def.cpp  model_def.h  model_handler.cpp  model_handler.h  model_profile.cpp  model_profile.h  rpc_call.h  rpc_service_base.h  server_base.cpp  server_base.h  spinlock.h  time_util.cpp  time_util.h  util.cpp  util.h
src/nexus/proto/: CMakeLists.txt  control.proto  nnquery.proto
src/nexus/scheduler/: CMakeLists.txt  backend_delegate.cpp  backend_delegate.h  backend_rpc_client.cpp  backend_rpc_client.h  complex_query.cpp  complex_query.h  frontend_delegate.cpp  frontend_delegate.h  frontend_rpc_client.cpp  frontend_rpc_client.h  rps_record.h  sch_info.cpp  sch_info.h  scheduler.cpp  scheduler.h  scheduler_main.cpp
tests/: CMakeLists.txt
tests/cpp/: test_main.cpp
tests/cpp/scheduler/: backend_delegate_test.cpp  backend_rpc_client_test.cpp  scheduler_test.cpp
tests/data/model_db/db/: model_db.yml
tests/data/model_db/profiles/TITAN_X_(Pascal)/: caffe:vgg16:1.txt  caffe:vgg_face:1.txt  caffe:vgg_s:1.txt  darknet:yolo9000:1.txt
tests/python/: generator.py  test_async_client.py  test_client.py  traffic_client.py
tools/: bench_tfshare.cpp  gen-random-pic.py  test_complex_query.cpp
tools/profiler/: CMakeLists.txt  profiler.cpp  profiler.py  test_pb.cpp
