include_directories(${PROJECT_SOURCE_DIR}/src)
include_directories(${PROJECT_BINARY_DIR}/bin/gen)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(CXX_TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/cpp/scheduler/backend_delegate_test.cpp ${CMAKE_CURRENT_SOURCE_DIR}/cpp/scheduler/scheduler_test.cpp)
set(CXX_TEST_MAIN_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/cpp/test_main.cpp)
add_library(runtest_lib ${CXX_TEST_SRCS})
add_executable(runtest ${CXX_TEST_MAIN_SRCS})
target_link_libraries(runtest_lib proto common backend_lib scheduler_lib nexus ${LD_FLAGS} ${BACKEND_LD_FLAGS})
target_link_libraries(runtest proto common backend_lib scheduler_lib nexus ${LD_FLAGS} ${BACKEND_LD_FLAGS})
set_target_properties(runtest_lib PROPERTIES OUTPUT_NAME "runtest_lib")
set_target_properties(runtest PROPERTIES OUTPUT_NAME "runtest")
